kubernetes/apps/hortusfox/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hortusfox-deployment
  labels:
    app: hortusfox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hortusfox
  template:
    metadata:
      labels:
        app: hortusfox
    spec:
      restartPolicy: Always
      containers:
      - name: hortusfox
        image: ghcr.io/danielbrendel/hortusfox-web:v6.1@sha256:dfe8ad32d41b67074a8fc7ae6196926f96a63acb319199344320697b1183f992
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: hortusfox-storage
          mountPath: /var/www/html/public/img
          subPath: public/img
        - name: hortusfox-storage
          mountPath: /var/www/html/app/logs
          subPath: app/logs
        - name: hortusfox-storage
          mountPath: /var/www/html/public/backup
          subPath: public/backup
        - name: hortusfox-storage
          mountPath: /var/www/html/public/themes
          subPath: public/themes
        - name: hortusfox-storage
          mountPath: /var/www/html/app/migrations
          subPath: app/migrations
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 5
      volumes:
      - name: hortusfox-storage
        persistentVolumeClaim:
          claimName: hortusfox-app-pvc
