kubernetes/apps/hortusfox/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hortusfox-service
  labels:
    app: hortusfox
spec:
  type: ClusterIP
  selector:
    app: hortusfox
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
